tests/baselines/reference/moduleAssignmentCompat4.errors.txt
==== tests/cases/compiler/moduleAssignmentCompat4.ts (2 errors) ====
    module A {
       export module M {
            class C { }
        }
    }
    module B {
        export module M {
            export class D { }
        }
    }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b: B;
           ~
!!! error TS2304: Cannot find name 'B'.
    
    a = b;
    b = a; // error